Fixed augmentation class constructor

--- a/train-biodata.ipynb
+++ b/train-biodata.ipynb
@@ -369,7 +369,7 @@
    ],
    "source": [
     "class ImgAugTransform:\n",
-    "    def init(self, testing=False):\n",
+    "    def __init__(self, testing=False):\n",
     "        if not testing:\n",
     "            self.aug = iaa.Sequential([\n",
     "                iaa.CropToFixedSize(128,128),\n",
