Corrected Augmenter class typos

--- a/train-biodata.ipynb
+++ b/train-biodata.ipynb
@@ -381,7 +381,7 @@
     "                iaa.CropToFixedSize(128,128),\n",
     "            ])\n",
     "\n",
-    "    def call(self, img):\n",
+    "    def __call__(self, img):\n",
     "        img = np.array(img)\n",
     "        return self.aug.augment_image(img)\n",
     "\n",
@@ -390,7 +390,7 @@
     "dset = SlideDataset([\n",
     "    \"BioData/TrainSet/*_SHG.tif\",\n",
     "    \"BioData/TrainSet/*_BF.tif\"\n",
-    "], name_regex=r\"(T|R)_(?P<name>[a-z0-9_]+)_(?P<type>[A-Z]+)\", transform=ImgAugTransform())\n",
+    "], name_regex=r\"(?P<name>[a-z0-9_]+)_(?P<type>[A-Z]+)\", transform=ImgAugTransform())\n",
     "print(\"Loading test set...\")\n",
     "dset_test = SlideDataset([\n",
     "    \"BioData/Validation1Set/*_SHG.tif\",\n",
